feat: add avatar and fix styles

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="column">
             <article>
                 <h1>Evgeniy Zhukov<br>Lead Backend Engineer</h1>
+                <img src="avatar.jpg" alt="Evgeniy Zhukov" width="120" class="avatar">
                 <address>
                     <span class="gray">Phone</span>: <a href="tel:+33781182297">+33 7 81 18 22 97</a><br/>
                     <span class="gray">Email</span>: <a href="mailto:evgeniy.zhukov.dev@gmail.com">evgeniy.zhukov.dev@gmail.com</a><br/>
@@ -73,6 +74,7 @@
             <section>
                 <h2>Languages</h2>
                 <ul>
+                    <li><strong>French</strong>: beginner</li>
                     <li><strong>English</strong>: B2</li>
                     <li><strong>Ukrainian</strong>: native</li>
                     <li><strong>Russian</strong>: native</li>
