feat: update avatar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="column">
             <article>
                 <h1>Evgeniy Zhukov<br>Lead Backend Engineer</h1>
-                <img src="avatar.jpg" alt="Evgeniy Zhukov" width="120" class="avatar">
+                <img src="avatar.png" alt="Evgeniy Zhukov" width="120" class="avatar">
                 <address>
                     <span class="gray">Phone</span>: <a href="tel:+33781182297">+33 7 81 18 22 97</a><br/>
                     <span class="gray">Email</span>: <a href="mailto:evgeniy.zhukov.dev@gmail.com">evgeniy.zhukov.dev@gmail.com</a><br/>
