feat: update info

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span class="gray">LinkedIn</span>: <a href="https://linkedin.com/in/evgeniy-zhukov">https://linkedin.com/in/evgeniy-zhukov</a><br/>
                     <span class="gray">Location</span>: Paris, France. Fully authorized to work
                 </address>
-                <p>Technically savvy software engineer with 11 years of professional experience in Web development. I prefer clean and stable code, but I also understand the importance of
+                <p>Technically savvy software engineer with 12 years of professional experience in Web development. I prefer clean and stable code, but I also understand the importance of
                     quick hypothesis testing. I have strong hard and soft skills. I enjoy both writing code and learning new technologies, as well as researching problems and opportunities
                     in the product, solving them, communicating with product owners and customers. I have a great experience in Agile methodologies.</p>
             </article>
@@ -40,8 +40,8 @@
             <section>
                 <h2>Technical skills</h2>
                 <ul>
-                    <li>PHP as a main language</li>
-                    <li>Yii, Symfony (Doctrine ORM), Laravel, Kohana, Codeigniter</li>
+                    <li>PHP, GoLang</li>
+                    <li>Symfony (Doctrine ORM), Yii, Laravel, Kohana, Codeigniter</li>
                     <li>PHPUnit (Codeception)</li>
                     <li>OOP, Patterns, SOLID, DRY, KISS, DDD, TDD</li>
                     <li>PostgreSQL, MySQL; Redis, Elasticsearch</li>
@@ -52,7 +52,6 @@
                     <li>LESS, SASS; Bootstrap</li>
                     <li>Twig, Smarty</li>
                     <li>Adobe Photoshop, Adobe Illustrator, Figma</li>
-                    <li>GoLang, Python, and NodeJS for pet-projects</li>
                 </ul>
             </section>
 
@@ -75,7 +74,7 @@
                 <h2>Languages</h2>
                 <ul>
                     <li><strong>French</strong>: beginner</li>
-                    <li><strong>English</strong>: B2</li>
+                    <li><strong>English</strong>: C1</li>
                     <li><strong>Ukrainian</strong>: native</li>
                     <li><strong>Russian</strong>: native</li>
                 </ul>
