--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Evgeniy Zhukov — Lead Backend Engineer</title>
-    <meta name="description" content="This is a CV of Evgeniy Zhukov, technically savvy software engineer with 12 years of professional experience in Web development">
+    <meta name="description" content="This is a CV of Evgeniy Zhukov, a technically savvy software engineer with 12 years of professional experience in Web development">
 
     <link rel="stylesheet" href="./style.css">
 
@@ -34,23 +34,21 @@
                 </address>
                 <p>Technically savvy software engineer with 12 years of professional experience in Web development. I prefer clean and stable code, but I also understand the importance of
                     quick hypothesis testing. I have strong hard and soft skills. I enjoy both writing code and learning new technologies, as well as researching problems and opportunities
-                    in the product, solving them, communicating with product owners and customers. I have a great experience in Agile methodologies.</p>
+                    in the product, solving them, and communicating with product owners and customers. I have a great experience in Agile methodologies.</p>
             </article>
 
             <section>
                 <h2>Technical skills</h2>
                 <ul>
-                    <li>PHP, GoLang</li>
+                    <li>GoLang, PHP</li>
                     <li>Symfony (Doctrine ORM), Yii, Laravel, Kohana, Codeigniter</li>
                     <li>PHPUnit (Codeception)</li>
                     <li>OOP, Patterns, SOLID, DRY, KISS, DDD, TDD</li>
                     <li>PostgreSQL, MySQL; Redis, Elasticsearch</li>
-                    <li>Docker, Vagrant, VirtualBox; Unix</li>
-                    <li>Git, SVN</li>
+                    <li>Docker; Unix; Git</li>
                     <li>JavaScript, HTML, CSS</li>
-                    <li>React, Vue, AngularJS, jQuery</li>
+                    <li>React, Vue, jQuery</li>
                     <li>LESS, SASS; Bootstrap</li>
-                    <li>Twig, Smarty</li>
                     <li>Adobe Photoshop, Adobe Illustrator, Figma</li>
                 </ul>
             </section>
@@ -73,8 +71,8 @@
             <section>
                 <h2>Languages</h2>
                 <ul>
+                    <li><strong>English</strong>: professional</li>
                     <li><strong>French</strong>: beginner</li>
-                    <li><strong>English</strong>: C1</li>
                     <li><strong>Ukrainian</strong>: native</li>
                     <li><strong>Russian</strong>: native</li>
                 </ul>
